redirects/ingress.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: enorme-uk-to-github
spec:
  parentRefs: [{ name: traefik-gateway, namespace: traefik }]
  hostnames: [enorme.uk]
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: github.com
            path:
              type: ReplaceFullPath
              replaceFullPath: /istoleyurballs
